force-app/main/default/objects/Cadastro_Cliente__c/Cadastro_Cliente__c.object-meta.xml
<CustomObject>
    <label>Cadastro Cliente</label>
    <nameField>
        <label>Cliente Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadastro Clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>