force-app/main/default/objects/Cadastro_Cliente__c/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <label>RG</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>